tests/syntax_error/bad_class_name.jou
class Foo:
    1: int  # Error: expected a method or a class field, got an integer
